# Zoomark

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/command_processing/: handle_args.rs
src/display/: table.rs  terminal.rs
src/file_operations/: create_file.rs  mod.rs  write_file.rs
src/helpers/: fn_helpers.rs  mod.rs
src/installation/: installation_folder.rs  mod.rs
src/json_operations/: mod.rs  struct_json.rs
