[package]
name = "zoomark"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["cargo"] }
owo-colors = "4.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tabled = { version = "0.16.0", features = ["ansi"] }
terminal_size = "0.4.0"
